# GOOM-Engine

./: CMakeLists.txt  README.md
data/: levels.h  settings.h
lib/GOOM/: CMakeLists.txt
lib/GOOM/include/GOOM/: G_Game.h  G_Input.h  G_Level.h  G_Settings.h  I_Application.h  M_Menu.h  R_Render.h  U_Log.h
lib/GOOM/src/: G_Game.c  G_Input.c  G_Level.c  I_Application.c  M_Menu.c  R_Render.c  U_Log.c
libs/GOOM/: CMakeLists.txt
libs/GOOM/include/GOOM/: G_Game.h  I_Application.h  R_Renderer.h
libs/GOOM/src/: G_Game.c  I_Application.c  R_Renderer.c
src/: main.c
